// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 bVkKoh"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 eAsauo"
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 ewFUaP"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with className matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 bVkKoh my_classname"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 kpypux my_second_classname"
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 kpypux my_third_classname"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with custom HTML tags matches with snapshot 1`] = `
<dl
  className="adaptable-grid__StyledGrid-txsbu0-0 bVkKoh"
>
  <dd
    className="adaptable-grid__StyledGridCol-txsbu0-1 eAsauo"
  >
    Test
  </dd>
  <dt
    className="adaptable-grid__StyledGridCol-txsbu0-1 ewFUaP"
  >
    Test
  </dt>
</dl>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 gnoTuV"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 humRof"
    offset={3}
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 kpypux"
  >
    Test
  </div>
</div>
`;
